add alert when try to register with an email already used.

--- a/bookShelf_fe/src/app/components/login/login.component.html
+++ b/bookShelf_fe/src/app/components/login/login.component.html
@@ -13,4 +13,7 @@
             <button type="submit" (click)="login()" class="btn btn-primary">Login</button>
         </form>
     </div>
+    <div>
+        You don't have an account? <button (click)="registration()">Register HERE!</button>
+    </div>
 </div>
