add all the entities for the database structure anda create the (still empty) dto

--- a/bookShelf_fe/src/app/components/register/register.component.html
+++ b/bookShelf_fe/src/app/components/register/register.component.html
@@ -17,4 +17,5 @@
             <button type="submit" (click)="save()" class="btn btn-primary">Register</button>
         </form>
     </div>
+    <div>Do you already have an account? <button (click)="goToLogin()">Login</button></div>
 </div>
