enable to add or remove a sex from the front end

--- a/bookShelf_fe/src/app/components/home/home.component.html
+++ b/bookShelf_fe/src/app/components/home/home.component.html
@@ -1,1 +1,28 @@
-<p>home works!</p>
+<aside>
+    <p>Edit the general library</p>
+    <a href="javascript:void(0)">
+      <i class="fa fa-user-o"></i>
+      Authors
+    </a>
+    <a href="javascript:void(0)">
+      <i class="fa fa-laptop"></i>
+      Countries
+    </a>
+    <a (click)="goToSexes()">
+      <i class="fa fa-clone"></i>
+      Sexes
+    </a>
+    <a href="javascript:void(0)">
+      <i class="fa fa-star-o"></i>
+      Languages
+    </a>
+    <a href="javascript:void(0)">
+      <i class="fa fa-trash-o"></i>
+      Books
+    </a>
+    <a href="javascript:void(0)">
+        <i class="fa fa-trash-o"></i>
+        Genres
+    </a>
+</aside>
+  
