add all the function related to the genres

--- a/bookShelf_fe/src/app/components/genres/genres.component.html
+++ b/bookShelf_fe/src/app/components/genres/genres.component.html
@@ -1,15 +1,15 @@
 <div class="container">
     <div >
-        <button class="btn" (click)="listAll()" *ngIf="show">List all the sexes</button>
+        <button class="btn" (click)="listAll()" *ngIf="show">List all the genres</button>
         <button class="btn" *ngIf="!show" (click)="hide()">Hide</button>
     </div>
     <form action="" class="form">
         <div>
             <label for="" class="label">Sex</label>
-            <input type="text" placeholder="example: male" [(ngModel)]="sex" [ngModelOptions]="{standalone: true}">
+            <input type="text" placeholder="example: fantasy" [(ngModel)]="genre" [ngModelOptions]="{standalone: true}">
         </div>
-        <button class="btn" (click)="removeSex()">Remove</button>
-        <button class="btn" (click)="addSex()">Add</button>
+        <button class="btn" (click)="removeGenre()">Remove</button>
+        <button class="btn" (click)="addGenre()">Add</button>
         <button class="btn" (click)="search()">Search</button>
     </form>
     <ul *ngIf="!show">
