--- a/bookShelf_fe/src/app/components/home/home.component.html
+++ b/bookShelf_fe/src/app/components/home/home.component.html
@@ -20,7 +20,7 @@
       <i class="fa fa-trash-o"></i>
       Books
     </a>
-    <a href="javascript:void(0)">
+    <a (click)="goToGenres()">
         <i class="fa fa-trash-o"></i>
         Genres
     </a>
